src/test/deca/context/invalid/object/badAssignBool.deca
class Y
{

}
class X
{
  int a;
  boolean b = true;
}


class B
{
  X x = new X();
  Y y = new Y();
  float a;
  void getX()
  {
    while (x.a < a){
      x.a = (x.a < a);
    }
  }
}
